--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .container {
     border: 10px solid black;
-    margin: 5% 5%;
+    margin-top: 5%;
+    margin-left: 35%;
     width: 384px;
     height: 384px;
     
@@ -13,6 +14,18 @@
 .divSquare{
     border: 2px solid green;
     width: 20px;
-    height: 20px;
+    height: 20px; 
     float: left;
+}
+
+#form {
+    text-align: center;
+}
+
+html {
+    margin-top: 3%;
+    background-image: url('images/spacebackground.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
